--- a/frontend/contacts/style/style.css
+++ b/frontend/contacts/style/style.css
@@ -45,16 +45,16 @@ input[type="tel"] {
 
 .Categorias select {
   padding: 6px;
-  font-size: 15px;
+  font-size: 18px;
   border: 2px solid #ccc;
   border-radius: 5px;
-  width: 15%;
+  width: 11rem;
   background-color: #f9f9f9;
   color: #5c5858;
 }
 
 .Categorias {
-  margin-bottom: 1px;
+  margin-bottom: 2px;
 }
 
 .Categorias select:focus {
@@ -65,10 +65,7 @@ input[type="tel"] {
 button {
   padding: 10px 30px;
   background-color: #007bff;
-  margin-left: 0%;
-  margin-right: 30px;
   color: white;
-  border: none;
   border-radius: 3px;
   cursor: pointer;
 }
