--- a/frontend/src/style/style.css
+++ b/frontend/src/style/style.css
@@ -1,324 +1,7 @@
-/* Parametros Gerais */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
-  transition: 0.3s;
-}
-
-.modal {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
-  margin: 5px 10px;
-  margin-bottom: 4rem;
-}
-
-/* Navbar */
-.navbar {
-  color: white;
-  text-align: center;
-}
-
-.primeiro-navbar {
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  font-size: 30px;
-  background-color: #007bff;
-  padding: 1rem 0px;
-  gap: 20px;
-}
-
-.segundo-navbar {
-  background-color: white;
-  color: #007bff;
-  gap: 2rem;
-}
-
-.segundo-navbar ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  gap: 1rem;
-  list-style: none;
-  font-size: 18px;
-}
-
-.segundo-navbar ul li {
-  padding: 18px 10px;
-  border-bottom: 3px solid transparent;
-}
-
-.segundo-navbar ul li:hover {
-  cursor: pointer;
-  border-color: #007bff;
-  margin-top: -4px;
-  transition: 0.3,5s;
-}
-
-.segundo-navbar div {
-  display: flex;
-  position: absolute;
-  right: 2rem;
-  top: 6.5rem;
-}
-
-#theme-icon {
-  margin-top: -5px;
-}
-
-#theme-icon i {
-  font-size: 1.4rem;
-  cursor: pointer;
-}
-
-#theme-icon i:hover {
-  color: darkblue;
-}
-
-/* Resgistro de Contatos */
-#registro-contatos {
-  background-color: #fff;
-  padding: 20px;
-  margin: 10px;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-label {
-  display: block;
-  font-size: 20px;
-  margin-bottom: 5px;
-  color: #333;
-}
-
-input[type="text"],
-input[type="email"],
-input[type="tel"] {
-  box-sizing: border-box;
-  width: 100%;
-  height: 40px;
-  padding: 8px;
-  margin-bottom: 10px;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-}
-
-.Categorias select {
-  padding: 6px;
-  font-size: 18px;
-  border: 2px solid #ccc;
-  border-radius: 5px;
-  width: 11rem;
-  background-color: #f9f9f9;
-  color: #5c5858;
-}
-
-.Categorias {
-  margin-bottom: 2px;
-}
-
-.Categorias select:focus {
-  outline: none;
-  border-color: #007bff;
-}
-
-button {
-  padding: 10px 30px;
-  background-color: #007bff;
-  color: white;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-button:hover {
-  background-color: darkblue;
-}
-
-/* Consulta de contatos */
-#consulta-contatos {
-  background-color: #fff;
-  padding: 25px;
-  margin: 10px;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  gap: 0.6rem;
-}
-
-#consulta-contatos button {
-  width: 8rem;
-}
-
-/* Tabela de contatos */
-table {
-  background-color: #fff;
-  width: calc(100% - 360px);
-  margin: 10px 15px;
-  border-collapse: collapse;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-}
-
-.acoes {
-  width: 20px;
-}
-
-th,
-td {
-  border: 1px solid #ccc;
-  padding: 8px;
-  text-align: left;
-}
-
-th {
-  background-color: #007bff;
-  color: white;
-}
-
-.seta:hover {
-  background-color: gainsboro;
-}
-
-#selectCategorias {
-  margin-bottom: 10px;
-  transition: background-color 0.3s;
-  margin-bottom: 10px;
-}
-
-#resultado-contatos {
-  width: 98%;
-  padding: 2px;
-  margin-bottom: 60px;
-  border: 3v solid #f1eded;
-}
-
-.alterPage {
-  font-size: 20px;
-  display: block;
-  text-decoration: none;
-  position: relative;
-}
-
-.alterPage a {
-  color: #fff;
-  text-decoration: none;
-  background-color: #007bff;
-  padding: 10px 20px;
-  display: inline-block;
-  align-content: center;
-  margin-left: 15px;
-  bottom: 10px;
-  position: absolute;
-}
-
-.alterPage a:hover {
-  background-color: darkblue;
-}
-
-/* Footer */
-.footer {
-  background-color: #007bff;
-  color: #fff;
-  padding: 20px 0px;
-  width: 100%;
-  position: relative;
-  bottom: -22vh;
-  display: flex;
-  justify-content: center;
-  gap: 35px;
-}
-
-.footer ul {
-  list-style: none;
-  display: flex;
-  gap: 15px;
-}
-
-.redeSocial li i {
-  cursor: pointer;
-}
-
-.redeSocial li i:hover {
-  cursor: pointer;
-  color: darkblue;
-}
-
-.wrapper {
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-/* DarkMode */
-
-.dark-mode {
-  background-color: #808080;
-  color: blue;
-  transition: 0.3s;
-}
-
-.dark-mode .primeiro-navbar {
-  color: #333;
-}
-
-.dark-mode .segundo-navbar {
-  background-color: #333;
-  color: blue;
-}
-
-.dark-mode #registro-contatos {
-  background-color: #333;
-}
-
-.dark-mode #consulta-contatos {
-  background-color: #333;
-}
-
-.dark-mode #resultado-contatos {
-  background-color: #333;
-}
-
-.dark-mode footer {
-  color: #333;
-}
-
-.dark-mode button {
-  color:darkblue ;
-  border: none;
-}
-
-.dark-mode th {
-  color: darkblue;
-}
-
-.dark-mode .btn-page {
-  color: darkblue;
-}
-
-/* Responsividade */
-@media (max-width: 800px) {
-  #register-contacts {
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
-  }
-
-  #consult-contacts {
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0 0 5px rgba(151, 144, 144, 0.2);
-  }
-
-  .footer {
-    width: 100vw;
-    text-align: center;
-    margin-left: 0px;
-  }
-}
+@import './global.css';
+@import './contacts.css';
+@import './category.css';
+@import './login.css';
+@import './footer.css';
+@import './nav.css';
+@import './darkMode.css';
