--- a/frontend/src/style/category.css
+++ b/frontend/src/style/category.css
@@ -28,7 +28,7 @@ body {
   font-size: 30px;
   background-color: #007bff;
   padding: 1rem 0px;
-  gap: 20px ;
+  gap: 20px;
 }
 
 .segundo-navbar {
@@ -46,11 +46,10 @@ body {
 
 .segundo-navbar ul li {
   padding: 18px 10px;
+  cursor: pointer;
 }
 
 .segundo-navbar ul li:hover {
-  background-color: darkblue;
-  color: white;
   cursor: pointer;
 }
 
@@ -126,10 +125,10 @@ button:hover {
   justify-content: center;
   display: flex;
   flex-direction: column;
-  gap: 0.6rem; 
+  gap: 0.6rem;
 }
 
-#consulta-categoria button{
+#consulta-categoria button {
   width: 8rem;
 }
 
