--- a/frontend/src/style/contacts.css
+++ b/frontend/src/style/contacts.css
@@ -58,7 +58,7 @@ body {
   cursor: pointer;
   border-color: #007bff;
   margin-top: -4px;
-  transition: 0.3,5s;
+  transition: 0.3, 5s;
 }
 
 .segundo-navbar div {
@@ -134,10 +134,6 @@ button {
   color: white;
   border-radius: 3px;
   cursor: pointer;
-}
-
-button:hover {
-  background-color: darkblue;
 }
 
 /* Consulta de contatos */
@@ -290,7 +286,7 @@ th {
 }
 
 .dark-mode button {
-  color:darkblue ;
+  color: darkblue;
   border: none;
 }
 
